fix modal on mobile

--- a/src/Components/UI/Project/Project.css
+++ b/src/Components/UI/Project/Project.css
@@ -12,6 +12,8 @@
 .card-modal {
 	width: 100%;
 	height: 100%;
+	overflow: auto;
+	max-height: 90vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
